@@ -1,7 +1,7 @@
 Package: RQuantLib
 Title: R Interface to the 'QuantLib' Library
-Version: 0.4.17
-Date: 2022-10-25
+Version: 0.4.18
+Date: 2023-01-06
 Maintainer: Dirk Eddelbuettel <edd@debian.org>
 Author: Dirk Eddelbuettel, Khanh Nguyen (2009-2010), Terry Leitch (since 2016)
 Description: The 'RQuantLib' package makes parts of 'QuantLib' accessible from R
@@ -9,7 +9,7 @@ Description: The 'RQuantLib' package makes parts of 'QuantLib' accessible from R
  for quantitative finance. The goal is to provide a standard open source library
  for quantitative analysis, modeling, trading, and risk management of financial
  assets.
-Suggests: tinytest, rgl (>= 0.111.5), shiny
+Suggests: tinytest, rgl, shiny
 Imports: methods, Rcpp (>= 0.11.0), stats, graphics, zoo
 LinkingTo: Rcpp
 SystemRequirements: QuantLib library (>= 1.14) from https://quantlib.org,
