@@ -1,3 +1,9 @@
+2023-01-06  Duncan Murdoch     <murdoch.duncan@gmail.com>
+
+        * DESCRIPTION (Version, Date): New release 0.4.18
+	* R/arrays.R:  Switch rgl::rgl.* to rgl::*3d functions
+	* demo/OptionSurfaces.R: Idem
+
 2022-10-25  Dirk Eddelbuettel  <edd@debian.org>
 
         * DESCRIPTION (Version, Date): New release 0.4.17
